--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-pdfs": "ts-node -P tsconfig.scripts.json scripts/generate-pdfs.ts"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/fs-extra": "^11.0.4",
+    "@types/pdfkit": "^0.13.9",
+    "@types/sharp": "^0.31.1",
+    "fs-extra": "^11.3.0",
     "next": "^14.2.29",
+    "pdfkit": "^0.17.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@types/node": "^20.17.50",
@@ -23,6 +30,7 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
